Upgrade to Spring Boot 3.4.6 with openRewrite